--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body> 
     <h1>Sahitya Verma</h1>
-    <p><em>I am a student of class 8 Learning how to create a website.</p></em>  
-    <img style="height:500;" width="700" src="sahitya.png.jpg"><hr>
+    <img style="height:500;" width="700" src="sahitya.png.jpg">
+    <p><em>I am a student of class 8 Learning how to create a website.</p></em><hr>
 <h3>Books Readed In Different Years</h3>
-<table border="10">
+<table border="1">
 <thead>
     <tr>
         <th>Years</th>
@@ -46,41 +46,20 @@
           <li>Rich Dad Poor Dad</li>
           <li>Alchemist</li>
           <li>Tinkle Novel</li>
+          <li>Sapiens:A Brief History Of Humankind</li>
       </ul></td>
   </tr>
 </tbody>
-  
-
-</table>
+</table><hr>
     <H3>Hobbies</H3>
-    <ol><li>Online Class</li>
-        <li>Web Development Course</li>
+    <ol><li>Listenining Songs</li>
+        <li>Learning Web Development</li>
         <li>Cycling</li>
-        <li><a href="https://en.wikipedia.org/wiki/Naruto">Watching Naruto</a></li>
+        <li>Reading Books</li>
+        <li>Playing Cricket</li>
+        <li>Chess</li>
     </ol><hr>
-    <table  cellspacing="20">
-        <thead >
-            <tr>
-                <th>Skills</th>
-                <th >Rating </th>
-          <tr>
-              <ol><td><li>Html</li></td></ol>
-              <td>*****</td>
-          </tr>
-          <tr>
-              <ol><td><li>Drawaing</li></td></ol>
-              <td>****</td>
-          </tr>
-          <tr>
-              <ol><td><li>Sketch Drawing</li></td></ol>
-              <td>****</td>
-          </tr>
-          <tr>
-          <tr><ol><td><li>Microsoft Excel</li></td></ol>
-            <td>****</td>
-        </tr>
-    </table><hr>
-    <H4>If You Want To Contant Me Click The Link Given Below:</H4>
-    <a href="contact details.html">My Gmail Id</a><hr>
+    <H4>If You Want To Contant Me Click  Below:</H4>
+    <a href="contact details.html"></a>Click Here<hr>
  </body>   
 </html>
