--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahitya's Personal Site</title>
+        <style>
+        body{
+            background-color:#EAF6F6 ;}
+     hr{background-color: whitesmoke;
+        border-style: dotted;
+    height: 10px;
+    width: 10px;
+    }
+        </style>
 </head>
-<body> 
+<body >
     <h1>Sahitya Verma</h1>
     <img style="height:500;" width="700" src="sahitya.png.jpg">
     <p><em>I am a student of class 8 Learning how to create a website.</p></em><hr>
@@ -59,7 +68,8 @@
         <li>Playing Cricket</li>
         <li>Chess</li>
     </ol><hr>
-    <H4>If You Want To Contant Me Click  Below:</H4>
-    <a href="contact details.html"></a>Click Here<hr>
- </body>   
-</html>
+    <h4>If you want to give me a message/contact me <a href="contact_details.html">click here</a></h4><hr>
+    </body>
+    </html>
+    
+      
